<resources>
    <string name="app_name">Birthday Reminder</string>
    <string name="add_reminder">add reminder</string>
    <string name="name">Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="contact_no">Contact No</string>
    <string name="email_id">Email-id</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="add_reminder_camel_case">Add Reminder</string>
    <string name="birthdate_format">Birthdate: %S</string>
    <string name="contact_no_format">Contact No: %S</string>
    <string name="email_format">Email: %S</string>
    <string name="update">update</string>
    <string name="no_data_found">No Data Found</string>
</resources>